# limuzin-grid-manager

./: .gitignore  AGENTS.md  FIXPROD.md  GITHUB.md  GRIDBASE.md  LICENSE  PLANS.md  README.md  ROADMAPv2.1.md  ROADMAPv2.md  USER_GUIDE.md  app.manifest  build_exe_windows.bat  pyproject.toml  roadmap.md  version_info.txt
.github/workflows/: ci.yml  release-windows.yml
src/limuzin_grid_manager/: __init__.py  __main__.py
src/limuzin_grid_manager/app/: __init__.py  export_formats.py  exporter.py  point_exporter.py  point_import.py  project.py  resources.py  runtime.py
src/limuzin_grid_manager/core/: __init__.py  crs.py  csv_export.py  export_cells.py  export_progress.py  geojson.py  geometry.py  kml.py  models.py  numbering.py  point_kml.py  points.py  stats.py  svg.py  zones.py
src/limuzin_grid_manager/ui/: main_window.py  points_window.py  preview.py  themes.py
tests/: test_core.py  test_export.py  test_export_formats.py  test_points.py  test_project.py  test_runtime.py  test_ui.py  test_zones.py
versions/: GRIDVERSIONS.md  v0.0.1.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.8.5.md  v0.9.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.0.5.md  v2.1.0.md  v2.1.1.md  v2.1.2.md  v2.1.3.md  v2.1.4.md  v2.2.0.md
versions/roadmaps_archive/: FIXPROD.md  ROADMAPv2.md
